# zfit-interface

./: .bumpversion.cfg  .cookiecutterrc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: cd.yml  ci.yml
ci/: bootstrap.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/api_definition/: data.ipynb  fitresult.ipynb  index.rst  loss.ipynb  minimizer.ipynb  model.ipynb  variables.ipynb
docs/project/: index.rst
docs/reference/: index.rst  zfit_interface.rst
src/zfit_interface/: __main__.py  cli.py
tests/: test_zfit_interface.py
zfit_interface/: __init__.py  data.py  func.py  loss.py  minimizer.py  model.py  param.py  pdf.py  result.py  typing.py  variables.py
zfit_interface/old/: data.py  loss.py  minimizer.py  model.py  param.py  result.py
