[metadata]
name = zfit_interface
description = zfit model fitting interface for HEP
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/zfit/zfit-interface
author = Jonas Eschle <Jonas.Eschle@cern.ch>, Albert Puig <apuignav@gmail.com>, Rafael Silva Coutinho <rsilvaco@cern.ch>, Matthieu Marinangeli <matthieu.marinangeli@cern.ch>
maintainer = zfit
maintainer_email = zfit@physik.uzh.ch
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Physics
keywords = TensorFlow, model, fitting, scalable, HEP, zfit

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
testpaths = tests
zip_safe = False

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 140
exclude = */migrations/*

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    dist
    build
    migrations
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --ignore=docs/conf.py
    --ignore=setup.py
    --ignore=ci
    --ignore=.eggs
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = zfit_interface
default_section = THIRDPARTY
forced_separate = test_zfit_interface
not_skip = __init__.py
skip = migrations
